Adaptadas nuevas versiones y plugins para que funcione con java 17